libs/@local/codegen/tests/snapshots/codegen__AdjacentlyTaggedEnum::Typescript.snap
---
source: libs/@local/codegen/tests/codegen.rs
expression: generated
---
type AdjacentlyTaggedEnum = {
	type: "Unit"
} | {
	type: "EmptyUnnamed"
	content: []
} | {
	type: "SingleUnnamed"
	content: number
} | {
	type: "DoubleUnnamed"
	content: [boolean, string]
} | {
	type: "EmptyNamed"
	content: {}
} | {
	type: "SingleNamed"
	content: {
		value: number
	}
} | {
	type: "MultiNamed"
	content: {
		value_1: number
		value_2: string
	}
};
