libs/@local/codegen/tests/snapshots/codegen__AdjacentlyTaggedEnum::data_type.snap
---
source: libs/@local/codegen/tests/codegen.rs
expression: named_data_type
---
NamedDataType {
    name: "AdjacentlyTaggedEnum",
    docs: "",
    deprecated: None,
    ext: Some(
        NamedDataTypeExt {
            sid: SpectaID {
                type_name: "AdjacentlyTaggedEnum",
                hash: 15424707544928899808,
            },
            impl_location: ImplLocation(
                "libs/@local/codegen/tests/codegen.rs:54:10",
            ),
        },
    ),
    inner: Enum(
        EnumType {
            name: "AdjacentlyTaggedEnum",
            sid: Some(
                SpectaID {
                    type_name: "AdjacentlyTaggedEnum",
                    hash: 15424707544928899808,
                },
            ),
            skip_bigint_checks: false,
            repr: Adjacent {
                tag: "type",
                content: "content",
            },
            generics: [],
            variants: [
                (
                    "Unit",
                    EnumVariant {
                        skip: false,
                        docs: "",
                        deprecated: None,
                        inner: Unit,
                    },
                ),
                (
                    "EmptyUnnamed",
                    EnumVariant {
                        skip: false,
                        docs: "",
                        deprecated: None,
                        inner: Unnamed(
                            UnnamedFields {
                                fields: [],
                            },
                        ),
                    },
                ),
                (
                    "SingleUnnamed",
                    EnumVariant {
                        skip: false,
                        docs: "",
                        deprecated: None,
                        inner: Unnamed(
                            UnnamedFields {
                                fields: [
                                    Field {
                                        optional: false,
                                        flatten: false,
                                        deprecated: None,
                                        docs: "",
                                        ty: Some(
                                            Primitive(
                                                i32,
                                            ),
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                ),
                (
                    "DoubleUnnamed",
                    EnumVariant {
                        skip: false,
                        docs: "",
                        deprecated: None,
                        inner: Unnamed(
                            UnnamedFields {
                                fields: [
                                    Field {
                                        optional: false,
                                        flatten: false,
                                        deprecated: None,
                                        docs: "",
                                        ty: Some(
                                            Primitive(
                                                bool,
                                            ),
                                        ),
                                    },
                                    Field {
                                        optional: false,
                                        flatten: false,
                                        deprecated: None,
                                        docs: "",
                                        ty: Some(
                                            Primitive(
                                                String,
                                            ),
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                ),
                (
                    "EmptyNamed",
                    EnumVariant {
                        skip: false,
                        docs: "",
                        deprecated: None,
                        inner: Named(
                            NamedFields {
                                fields: [],
                                tag: None,
                            },
                        ),
                    },
                ),
                (
                    "SingleNamed",
                    EnumVariant {
                        skip: false,
                        docs: "",
                        deprecated: None,
                        inner: Named(
                            NamedFields {
                                fields: [
                                    (
                                        "value",
                                        Field {
                                            optional: false,
                                            flatten: false,
                                            deprecated: None,
                                            docs: "",
                                            ty: Some(
                                                Primitive(
                                                    i32,
                                                ),
                                            ),
                                        },
                                    ),
                                ],
                                tag: None,
                            },
                        ),
                    },
                ),
                (
                    "MultiNamed",
                    EnumVariant {
                        skip: false,
                        docs: "",
                        deprecated: None,
                        inner: Named(
                            NamedFields {
                                fields: [
                                    (
                                        "value_1",
                                        Field {
                                            optional: false,
                                            flatten: false,
                                            deprecated: None,
                                            docs: "",
                                            ty: Some(
                                                Primitive(
                                                    i32,
                                                ),
                                            ),
                                        },
                                    ),
                                    (
                                        "value_2",
                                        Field {
                                            optional: false,
                                            flatten: false,
                                            deprecated: None,
                                            docs: "",
                                            ty: Some(
                                                Primitive(
                                                    String,
                                                ),
                                            ),
                                        },
                                    ),
                                ],
                                tag: None,
                            },
                        ),
                    },
                ),
            ],
        },
    ),
}
