libs/@local/codegen/tests/snapshots/codegen__ExternallyTaggedEnum::Typescript.snap
---
source: libs/@local/codegen/tests/codegen.rs
expression: generated
---
type ExternallyTaggedEnum = "Unit" | {
	EmptyUnnamed: []
} | {
	SingleUnnamed: number
} | {
	DoubleUnnamed: [boolean, string]
} | {
	EmptyNamed: {}
} | {
	SingleNamed: {
		value: number
	}
} | {
	MultiNamed: {
		value_1: number
		value_2: string
	}
};
