libs/@local/codegen/tests/snapshots/codegen__ExternallyTaggedEnum::definition.snap
---
source: libs/@local/codegen/tests/codegen.rs
expression: definition
---
Enum(
    Enum {
        name: "ExternallyTaggedEnum",
        variants: [
            EnumVariant {
                name: "Unit",
                body: Unit,
            },
            EnumVariant {
                name: "EmptyUnnamed",
                body: Tuple {
                    fields: [],
                },
            },
            EnumVariant {
                name: "SingleUnnamed",
                body: Tuple {
                    fields: [
                        Field {
                            definition: Some(
                                Primitive(
                                    Number,
                                ),
                            ),
                        },
                    ],
                },
            },
            EnumVariant {
                name: "DoubleUnnamed",
                body: Tuple {
                    fields: [
                        Field {
                            definition: Some(
                                Primitive(
                                    Boolean,
                                ),
                            ),
                        },
                        Field {
                            definition: Some(
                                Primitive(
                                    String,
                                ),
                            ),
                        },
                    ],
                },
            },
            EnumVariant {
                name: "EmptyNamed",
                body: Object {
                    fields: [],
                },
            },
            EnumVariant {
                name: "SingleNamed",
                body: Object {
                    fields: [
                        (
                            "value",
                            Field {
                                definition: Some(
                                    Primitive(
                                        Number,
                                    ),
                                ),
                            },
                        ),
                    ],
                },
            },
            EnumVariant {
                name: "MultiNamed",
                body: Object {
                    fields: [
                        (
                            "value_1",
                            Field {
                                definition: Some(
                                    Primitive(
                                        Number,
                                    ),
                                ),
                            },
                        ),
                        (
                            "value_2",
                            Field {
                                definition: Some(
                                    Primitive(
                                        String,
                                    ),
                                ),
                            },
                        ),
                    ],
                },
            },
        ],
        tagging: External,
    },
)
