libs/@local/codegen/tests/snapshots/codegen__InternallyTaggedEnum::Typescript.snap
---
source: libs/@local/codegen/tests/codegen.rs
expression: generated
---
type InternallyTaggedEnum = {
	type: "Unit"
} | {
	type: "EmptyNamed"
} | {
	type: "SingleNamed"
	value: number
} | {
	type: "MultiNamed"
	value_1: number
	value_2: string
};
