libs/@local/codegen/tests/snapshots/codegen__InternallyTaggedEnum::definition.snap
---
source: libs/@local/codegen/tests/codegen.rs
expression: definition
---
Enum(
    Enum {
        name: "InternallyTaggedEnum",
        variants: [
            EnumVariant {
                name: "Unit",
                body: Unit,
            },
            EnumVariant {
                name: "EmptyNamed",
                body: Object {
                    fields: [],
                },
            },
            EnumVariant {
                name: "SingleNamed",
                body: Object {
                    fields: [
                        (
                            "value",
                            Field {
                                definition: Some(
                                    Primitive(
                                        Number,
                                    ),
                                ),
                            },
                        ),
                    ],
                },
            },
            EnumVariant {
                name: "MultiNamed",
                body: Object {
                    fields: [
                        (
                            "value_1",
                            Field {
                                definition: Some(
                                    Primitive(
                                        Number,
                                    ),
                                ),
                            },
                        ),
                        (
                            "value_2",
                            Field {
                                definition: Some(
                                    Primitive(
                                        String,
                                    ),
                                ),
                            },
                        ),
                    ],
                },
            },
        ],
        tagging: Internal {
            tag: "type",
        },
    },
)
