libs/@local/codegen/tests/snapshots/codegen__UntaggedEnum::Typescript.snap
---
source: libs/@local/codegen/tests/codegen.rs
expression: generated
---
type UntaggedEnum = null | [] | number | [boolean, string] | {} | {
	value: number
} | {
	value_1: number
	value_2: string
};
